--- a/articles/cognitive-services/LUIS/toc.yml
+++ b/articles/cognitive-services/LUIS/toc.yml
@@ -219,7 +219,7 @@
           href: luis-how-to-manage-keys.md
         - name: Hantera versioner
           href: luis-how-to-manage-versions.md
-        - name: Samarbeta med andra författare
+        - name: Hantera författare och medarbetare
           href: luis-how-to-collaborate.md
         - name: Hantera redigeringsnyckel
           href: luis-how-to-account-settings.md
