--- a/articles/iot-hub/TOC.yml
+++ b/articles/iot-hub/TOC.yml
@@ -314,6 +314,10 @@
               href: iot-hub-device-management-iot-extension-azure-cli-2-0.md
             - name: Fjärrövervakning och aviseringar med Logic Apps
               href: iot-hub-monitoring-notifications-with-azure-logic-apps.md
+    - name: Felsöka
+      items:
+        - name: Enhetsfrånkopplingar
+          href: iot-hub-troubleshoot-connectivity.md
 - name: Referens
   items:
     - name: Azure CLI
