--- a/articles/sql-database/index.yml
+++ b/articles/sql-database/index.yml
@@ -1,4 +1,10 @@
 ### YamlMime:YamlDocument
+ms.openlocfilehash: efd412d3d6c0623b2b88dc32e1fb1fee82090271
+ms.sourcegitcommit: 1d850f6cae47261eacdb7604a9f17edc6626ae4b
+ms.translationtype: HT
+ms.contentlocale: sv-SE
+ms.lasthandoff: 08/02/2018
+ms.locfileid: "39426725"
 documentType: LandingData
 title: Dokumentation om Azure SQL Database
 metadata:
@@ -7,19 +13,13 @@ metadata:
   meta.description: Learn how to use Azure SQL databases.
   services: sql-database
   author: CarlRabeler
-  manager: carigg
+  manager: craigg
   ms.service: sql-database
   ms.tgt_pltfrm: na
   ms.devlang: 
   ms.topic: landing-page
   ms.date: 07/07/2018
   ms.author: carlrab
-  ms.openlocfilehash: eae18cf5956582f3b66eb2ed837412815efbd4cf
-  ms.sourcegitcommit: 7827d434ae8e904af9b573fb7c4f4799137f9d9b
-  ms.translationtype: HT
-  ms.contentlocale: sv-SE
-  ms.lasthandoff: 07/18/2018
-  ms.locfileid: "39112509"
 abstract:
   description: Azure SQL Database är en relationsdatabas-som-en-tjänst (DBaaS) som bygger på den senaste stabila versionen av Microsoft SQL Server Database-motorn. SQL Database är en högpresterande, tillförlitlig och säker databas som du kan använda för att skapa datadrivna program och webbplatser i valfritt programmeringsspråk, utan att behöva hantera infrastrukturen. Lär dig hur du använder SQL Database med våra snabbstarter, självstudier och exempel.
   aside:
