commit translated contents

--- a/articles/automation/TOC.yml
+++ b/articles/automation/TOC.yml
@@ -147,7 +147,7 @@
           href: automation-dsc-cd-chocolatey.md
         - name: Vidarebefordra Azure Automation DSC-rapportdata till OMS Log Analytics
           href: automation-dsc-diagnostics.md
-    - name: Hantera tillgångar
+    - name: Hantera delade resurser
       items:
         - name: Certifikat
           href: automation-certificates.md
