--- a/articles/iot-hub/TOC.yml
+++ b/articles/iot-hub/TOC.yml
@@ -308,6 +308,8 @@
               href: iot-hub-live-data-visualization-in-web-apps.md
             - name: Väderprognoser med hjälp av Azure Machine Learning
               href: iot-hub-weather-forecast-machine-learning.md
+            - name: Enhetshantering med Azure IoT Toolkit för VS Code
+              href: iot-hub-device-management-iot-toolkit.md
             - name: Enhetshantering med iothub-explorer
               href: iot-hub-device-management-iothub-explorer.md
             - name: Enhetshantering med IoT-tillägg för Azure CLI 2.0
