--- a/articles/lab-services/classroom-labs/TOC.yml
+++ b/articles/lab-services/classroom-labs/TOC.yml
@@ -14,6 +14,8 @@
       href: tutorial-setup-classroom-lab.md
     - name: 3. Åtkomst till ett klassrumslabb
       href: tutorial-connect-virtual-machine-classroom-lab.md
+    - name: 4. Spåra användning av ett klassrumslabb
+      href: tutorial-track-usage.md
 - name: Instruktionsguider
   items:
     - name: Hantera labbkonton
