--- a/articles/service-fabric/toc.yml
+++ b/articles/service-fabric/toc.yml
@@ -187,6 +187,8 @@
               href: service-fabric-dnsservice.md
             - name: Omvänd proxy
               href: service-fabric-reverseproxy.md
+            - name: Konfigurera och ställa in omvänd proxy
+              href: service-fabric-reverseproxy-setup.md
             - name: Konfigurera omvänd proxy för säker kommunikation
               href: service-fabric-reverseproxy-configure-secure-communication.md
             - name: Diagnostik för omvänd proxy
