--- a/articles/virtual-machines/linux/toc.yml
+++ b/articles/virtual-machines/linux/toc.yml
@@ -175,8 +175,6 @@
           href: ../../backup/tutorial-restore-files.md?toc=%2fazure%2fvirtual-machines%2flinux%2ftoc.json
     - name: Hantera virtuella datorer
       items:
-        - name: Förskottsbetala för virtuella datorer – reserverade instanser
-          href: prepay-reserved-vm-instances.md
         - name: VM-användning
           href: vm-usage.md
         - name: Vanliga CLI-åtgärder
@@ -228,6 +226,14 @@
           href: instance-metadata-service.md
         - name: Hämta användningsstatistik med REST
           href: metrics-vm-usage-rest.md
+    - name: Hantera kostnader
+      items:
+        - name: Förskottsbetala för virtuella datorer – reserverade instanser
+          href: prepay-reserved-vm-instances.md
+        - name: Vad är reserverade instanser?
+          href: ../../billing/billing-save-compute-costs-reservations.md
+        - name: Flexibilitet för VM-instansstorlek
+          href: reserved-vm-instance-size-flexibility.md
     - name: Använda avbildningar
       items:
         - name: Hitta och använda avbildningar
@@ -311,7 +317,7 @@
               href: ../../storage/common/storage-java-jenkins-continuous-integration-solution.md
             - name: Säker Jenkins
               href: 'https://jenkins.io/blog/2017/04/20/secure-jenkins-on-azure/'
-    - name: Köra behållare
+    - name: Köra containrar
       items:
         - name: Skapa Docker-värd
           href: dockerextension.md
