--- a/articles/virtual-machines/windows/toc.yml
+++ b/articles/virtual-machines/windows/toc.yml
@@ -177,8 +177,6 @@
           href: ../../backup/tutorial-backup-vm-at-scale.md?toc=%2fazure%2fvirtual-machines%2fwindows%2ftoc.json
     - name: Hantera virtuella datorer
       items:
-        - name: Förskottsbetala för virtuella datorer – reserverade instanser
-          href: prepay-reserved-vm-instances.md
         - name: VM-användning
           href: vm-usage.md
         - name: Vanliga PowerShell-åtgärder
@@ -216,6 +214,14 @@
           href: instance-metadata-service.md
         - name: Aktivera kapslad virtualisering
           href: nested-virtualization.md
+    - name: Hantera kostnader
+      items:
+        - name: Förskottsbetala för virtuella datorer – reserverade instanser
+          href: prepay-reserved-vm-instances.md
+        - name: Vad är reserverade instanser?
+          href: ../../billing/billing-save-compute-costs-reservations.md
+        - name: Flexibilitet för VM-instansstorlek
+          href: reserved-vm-instance-size-flexibility.md
     - name: Använda avbildningar
       items:
         - name: Hitta och använda avbildningar
