--- a/articles/virtual-network/toc.yml
+++ b/articles/virtual-network/toc.yml
@@ -137,6 +137,9 @@
                   href: create-vm-accelerated-networking-powershell.md
                 - name: Azure CLI
                   href: create-vm-accelerated-networking-cli.md
+                  items:
+                    - name: Konfigurera DPDK
+                      href: setup-dpdk.md
             - name: Nätverksdataflöde för virtuella datorer
               href: virtual-machine-network-throughput.md
         - name: Scenarier för anslutning
