--- a/articles/data-factory/TOC.yml
+++ b/articles/data-factory/TOC.yml
@@ -27,13 +27,7 @@
       href: quickstart-create-data-factory-resource-manager-template.md
 - name: Självstudier
   items:
-    - name: 1. Etablera Azure-SSIS-integreringskörning
-      items:
-        - name: Användargränssnitt
-          href: tutorial-deploy-ssis-packages-azure.md
-        - name: Azure PowerShell
-          href: tutorial-deploy-ssis-packages-azure-powershell.md
-    - name: 2 – Kopiera data i molnet
+    - name: Kopiera data i molnet
       items:
         - name: Kopiera data-verktyg
           href: tutorial-copy-data-tool.md
@@ -41,7 +35,7 @@
           href: tutorial-copy-data-portal.md
         - name: .NET
           href: tutorial-copy-data-dot-net.md
-    - name: 3 – Kopiera lokala data i molnet
+    - name: Kopiera lokala data till molnet
       items:
         - name: Kopiera data-verktyg
           href: tutorial-hybrid-copy-data-tool.md
@@ -49,34 +43,34 @@
           href: tutorial-hybrid-copy-portal.md
         - name: Azure PowerShell
           href: tutorial-hybrid-copy-powershell.md
-    - name: 4 – Masskopiera data i molnet
+    - name: Masskopiera data
       items:
         - name: Användargränssnitt
           href: tutorial-bulk-copy-portal.md
         - name: Azure PowerShell
           href: tutorial-bulk-copy.md
-    - name: 5 – Kopiera data inkrementellt
+    - name: Kopiera data stegvis
       href: tutorial-incremental-copy-overview.md
       items:
-        - name: 5.1 – Kopiera från en tabell
+        - name: 1 – Kopiera från en tabell
           items:
             - name: Användargränssnitt
               href: tutorial-incremental-copy-portal.md
             - name: Azure PowerShell
               href: tutorial-incremental-copy-powershell.md
-        - name: 5.2 – Kopiera från flera tabeller
+        - name: 2 – Kopiera från flera tabeller
           items:
             - name: Användargränssnitt
               href: tutorial-incremental-copy-multiple-tables-portal.md
             - name: Azure PowerShell
               href: tutorial-incremental-copy-multiple-tables-powershell.md
-        - name: 5.3 – Använd funktionen för användningsspårning
+        - name: 3 – Använd funktionen för att spåra ändringar
           items:
             - name: Användargränssnitt
               href: tutorial-incremental-copy-change-tracking-feature-portal.md
             - name: Azure PowerShell
               href: tutorial-incremental-copy-change-tracking-feature-powershell.md
-    - name: 6 – Omvandla data i molnet
+    - name: Omvandla data i molnet
       items:
         - name: HDInsight Spark
           items:
@@ -88,18 +82,24 @@
           items:
             - name: Användargränssnitt
               href: transform-data-using-databricks-notebook.md
-    - name: 7 – Transformera data i virtuellt nätverk
+    - name: Transformera data i virtuellt nätverk
       items:
         - name: Användargränssnitt
           href: tutorial-transform-data-hive-virtual-network-portal.md
         - name: Azure PowerShell
           href: tutorial-transform-data-hive-virtual-network.md
-    - name: 8 – Kontrollflöde
+    - name: Lägga till branchning och länkning
       items:
         - name: Användargränssnitt
           href: tutorial-control-flow-portal.md
         - name: .NET
           href: tutorial-control-flow.md
+    - name: Kör SSIS-paket i Azure
+      items:
+        - name: Användargränssnitt
+          href: tutorial-deploy-ssis-packages-azure.md
+        - name: Azure PowerShell
+          href: tutorial-deploy-ssis-packages-azure-powershell.md
 - name: Exempel
   items:
     - name: Kodexempel
