--- a/articles/data-factory/index.yml
+++ b/articles/data-factory/index.yml
@@ -1,4 +1,10 @@
 ### YamlMime:YamlDocument
+ms.openlocfilehash: 2bce3a11d3f9b88b9e6e054e022ddbf1a5573453
+ms.sourcegitcommit: 615403e8c5045ff6629c0433ef19e8e127fe58ac
+ms.translationtype: HT
+ms.contentlocale: sv-SE
+ms.lasthandoff: 08/06/2018
+ms.locfileid: "39578270"
 documentType: LandingData
 title: Dokumentation om Azure Data Factory
 metadata:
@@ -11,30 +17,24 @@ metadata:
   ms.tgt_pltfrm: na
   ms.devlang: na
   ms.topic: landing-page
-  ms.date: 09/08/2017
+  ms.date: 08/06/2018
   ms.author: douglasl
-  ms.openlocfilehash: 624b2f0968776115f35698710cdc930a9a824922
-  ms.sourcegitcommit: 0c490934b5596204d175be89af6b45aafc7ff730
-  ms.translationtype: HT
-  ms.contentlocale: sv-SE
-  ms.lasthandoff: 06/27/2018
-  ms.locfileid: "37047208"
 abstract:
-  description: Lär dig att använda Data Factory, en tjänst för molndataintegrering, för att ordna datalagrings-, rörelse- och bearbetningstjänster i automatiserade datapipelines. Självstudier och annan dokumentation visar hur du konfigurerar och hanterar datapipelines, samt flyttar och omvandlar data för analys. <p>Om du använder V1 av Data Factory-tjänsten går du till <a href=/azure/data-factory/v1/data-factory-introduction>V1-dokumentationen.</a></p>
+  description: Lär dig att använda Data Factory, en tjänst för molndataintegrering, för att ordna datalagrings-, rörelse- och bearbetningstjänster i automatiserade datapipelines. Självstudier och annan dokumentation visar hur du konfigurerar och hanterar datapipelines samt flyttar och omvandlar data för analys. <p>Om du använder V1 av Data Factory-tjänsten går du till <a href=/azure/data-factory/v1/data-factory-introduction>V1-dokumentationen.</a></p>
   aside:
     image:
       alt: 
       height: 110
       src: media/index/video.png
       width: 250
-    title: Skapa pipeliner visuellt för Azure Data Factory (19:31)
-    href: https://azure.microsoft.com/en-us/resources/videos/azure-friday-visually-build-pipelines-for-azure-data-factory-v2
+    title: 'Nya funktioner för modern dataintegrering i molnet (1: 19:22)'
+    href: https://channel9.msdn.com/Events/Build/2018/BRK2204/player
     width: 250
 sections:
 - title: Snabbstarter på 5 minuter
   items:
   - type: paragraph
-    text: 'Lär dig hur du skapar en datafabrik med:'
+    text: 'Lär dig hur du skapar en Data Factory-pipeline för att flytta och bearbeta data med någon av följande snabbstarter:'
   - type: list
     style: icon48
     items:
@@ -71,16 +71,16 @@ sections:
   - type: paragraph
     text: 'Lär dig att skapa och övervaka en datafabrik:'
   - type: list
-    style: ordered
+    style: unordered
     items:
-    - html: Distribuera SSIS-paket till Azure – <a href="/azure/data-factory/tutorial-create-azure-ssis-runtime-portal">Data Factory-användargränssnitt</a> | <a href="/azure/data-factory/tutorial-deploy-ssis-packages-azure">Azure PowerShell</a>
     - html: Kopiera data i molnet – <a href="/azure/data-factory/tutorial-copy-data-tool">verktyget för att kopiera data</a> | <a href="/azure/data-factory/tutorial-copy-data-portal">Data Factory-användargränssnitt</a> | <a href="/azure/data-factory/tutorial-copy-data-dot-net">.NET</a>
     - html: Kopiera lokala data till molnet – <a href="/azure/data-factory/tutorial-hybrid-copy-data-tool">verktyget för att kopiera data | <a href="/azure/data-factory/tutorial-hybrid-copy-portal">Data Factory-användargränssnitt</a> | <a href="/azure/data-factory/tutorial-hybrid-copy-powershell">Azure PowerShell</a>
     - html: Masskopiera data – <a href="/azure/data-factory/tutorial-bulk-copy-portal">Data Factory-användargränssnitt</a> | <a href="/azure/data-factory/tutorial-bulk-copy">Azure PowerShell</a>
     - html: Kopiera data inkrementellt – <a href="/azure/data-factory/tutorial-incremental-copy-portal">Data Factory-användargränssnitt</a> | <a href="/azure/data-factory/tutorial-incremental-copy-powershell">Azure PowerShell</a>
     - html: Omvandla data i molnet med Spark – <a href="/azure/data-factory/tutorial-transform-data-spark-portal">Data Factory-användargränssnitt</a> | <a href="/azure/data-factory/tutorial-transform-data-spark-powershell">Azure PowerShell</a>
     - html: Omvandla data i ett virtuellt nätverk – <a href="/azure/data-factory/tutorial-transform-data-hive-virtual-network-portal">Data Factory-användargränssnitt</a> | <a href="/azure/data-factory/tutorial-transform-data-hive-virtual-network">Azure PowerShell</a>
-    - html: Kontrollera flödet – <a href="/azure/data-factory/tutorial-control-flow-portal">Data Factory-användargränssnitt</a> | <a href="/azure/data-factory/tutorial-control-flow">.NET</a>
+    - html: Lägga till branchning och länkning – <a href="/azure/data-factory/tutorial-control-flow-portal">Data Factory UI</a> | <a href="/azure/data-factory/tutorial-control-flow">.NET</a>
+    - html: Köra SSIS-paket i Azure – <a href="/azure/data-factory/tutorial-create-azure-ssis-runtime-portal">Data Factory UI</a> | <a href="/azure/data-factory/tutorial-deploy-ssis-packages-azure">Azure PowerShell</a>
 - title: Exempel
   items:
   - type: paragraph
