--- a/articles/jenkins/toc.yml
+++ b/articles/jenkins/toc.yml
@@ -9,6 +9,7 @@
   items:
     - name: Skapa en Jenkins-server
       href: /azure/jenkins/install-jenkins-solution-template
+      maintainContext: true
 - name: Självstudier
   items:
     - name: CI/CD till App Service
