--- a/articles/search/TOC.yml
+++ b/articles/search/TOC.yml
@@ -47,8 +47,6 @@
   items:
     - name: Azure-kodexempel
       href: 'https://azure.microsoft.com/resources/samples/?service=search'
-    - name: GitHub-exempel
-      href: 'https://github.com/Azure-Samples/?utf8=%E2%9C%93&query=search'
 - name: Begrepp
   items:
     - name: Kognitiv sökning (förhandsversion)
@@ -73,6 +71,8 @@
           href: cognitive-search-create-custom-skill-example.md
         - name: Felsökningstips
           href: cognitive-search-concept-troubleshooting.md
+        - name: Dokumentationslänkar
+          href: cognitive-search-resources-documentation.md
     - name: Planering
       items:
         - name: Välj en nivå
@@ -175,7 +175,7 @@
               href: search-indexer-field-mappings.md
     - name: Söker efter data
       items:
-        - name: Grunderna för frågor
+        - name: Grunder
           href: search-query-overview.md
         - name: Sökutforskaren (portal)
           href: search-explorer.md
@@ -215,6 +215,10 @@
           href: search-traffic-analytics.md
 - name: Referens
   items:
+    - name: Azure CLI
+      href: 'https://docs.microsoft.com/cli/azure/search?view=azure-cli-latest'
+    - name: Azure PowerShell
+      href: 'https://www.powershellgallery.com/packages/AzureRM.search/0.1.0-preview'
     - name: .NET
       href: /dotnet/api/?term=microsoft.azure.search
     - name: .NET (hantering)
@@ -250,35 +254,27 @@
           href: cognitive-search-skill-shaper.md
 - name: Resurser
   items:
-    - name: FAQ – vanliga frågor och svar
+    - name: Support av Azure-communityn
+      href: 'https://azure.microsoft.com/support/community/?product=search'
+    - name: Azure-översikt
+      href: 'https://azure.microsoft.com/roadmap/?tag=azure-search'
+    - name: Demowebbplatser
+      items:
+        - name: Finansiella filer – demo
+          href: 'http://wolterskluwereap.azurewebsites.net/'
+        - name: JFK-filer – demo
+          href: 'http://aka.ms/jfkfiles'
+        - name: Jobblisteapp
+          href: 'http://aka.ms/azjobsdemo'
+        - name: Sökanalys – demo
+          href: 'http://alice.unearth.ai/'
+        - name: Sök bland användarsituationer
+          href: 'https://searchsamples.azurewebsites.net/'
+    - name: VANLIGA FRÅGOR OCH SVAR
       href: search-faq-frequently-asked-questions.md
     - name: Prissättning
       href: 'https://azure.microsoft.com/pricing/details/search/'
     - name: Tjänstuppdateringar
       href: 'https://azure.microsoft.com/updates/?product=search'
-    - name: Dokumentation om kognitiv sökning
-      href: cognitive-search-resources-documentation.md
-    - name: Kursprogramvara och självstudier
-      items:
-        - name: Videor och självstudier
-          href: search-video-demo-tutorial-list.md
-        - name: Virtual Academy
-          href: 'https://mva.microsoft.com/training-courses/using-windows-azure-search-10540?l=ADkxnd97_9304984382'
-    - name: Demowebbplatser
-      items:
-        - name: Search Analyzer Demo
-          href: 'http://alice.unearth.ai/'
-        - name: Live-demoappar
-          href: 'https://searchsamples.azurewebsites.net/'
-        - name: Jobblisteapp
-          href: 'http://aka.ms/azjobsdemo'
-    - name: Partner och forum
-      items:
-        - name: Azure Search MSDN-forum
-          href: 'https://social.msdn.microsoft.com/forums/azure/home?forum=AzureSearch'
-        - name: Stack Overflow
-          href: 'http://stackoverflow.com/questions/tagged/azure-search'
-        - name: 'blogg: modeller med relationsdata'
-          href: 'http://blogs.technet.com/b/onsearch/archive/2015/09/08/modeling-the-adventureworks-inventory-database-for-azure-search.aspx'
-        - name: 'blogg: flernivåfasettering'
-          href: 'http://blogs.technet.com/b/onsearch/archive/2015/09/09/multi-level-taxonomy-facets-in-azure-search.aspx'
+    - name: Videoklipp
+      href: 'https://azure.microsoft.com/resources/videos/index/?services=search'
