--- a/articles/terraform/toc.yml
+++ b/articles/terraform/toc.yml
@@ -43,3 +43,9 @@
       href: 'https://registry.terraform.io/modules/Azure'
     - name: Terraform-referens
       href: 'http://aka.ms/terraform'
+- name: Resurser
+  items:
+    - name: Azure och Terraform
+      href: 'https://azure.microsoft.com/solutions/devops/terraform/'
+    - name: Azure-översikt
+      href: 'https://azure.microsoft.com/roadmap/'
